tests/rename/should_fail/T16385.hs
{-# LANGUAGE ScopedTypeVariables #-}
module T16385 where

instance c
instance forall c. c
