tests/rename/should_fail/T16385.stderr

T16385.hs:4:10: error: [GHC-53946]
    • Illegal head of an instance declaration: ‘c’.
      Instance heads must be of the form
        C ty_1 ... ty_n
      where ‘C’ is a class.
    • In the instance declaration for ‘c’

T16385.hs:5:10: error: [GHC-53946]
    • Illegal head of an instance declaration: ‘c’.
      Instance heads must be of the form
        C ty_1 ... ty_n
      where ‘C’ is a class.
    • In the instance declaration for ‘c’
